# techspecs-python

./: README.md  setup.cfg
examples/: advanced_search.py  all_brands.py  all_categories.py  all_products.py  basic_search.py  details.py  machineid_search.py  product_detail.py  product_search.py  search.py
src/Techspecs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/techspecs/: __init__.py  techspecs.py
tests/: all_products.py  details.py  test_get_all_brandlogos.py  test_get_all_brands.py  test_get_all_categories.py  test_machine_id_search.py
