[metadata]
name = TechSpecs
version = 1.0.0
author = TechSpecs
author_email = support@techspecs.io
description = TechSpecs library for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/techspecs/techspecs-python
project_urls =
    Bug Tracker = https://github.com/techspecs/techspecs-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src